@@ -35,4 +35,5 @@ package org.apache
  */
 package object spark {
   // For package docs only
+  val SPARK_VERSION = "0.9.1"
 }
