@@ -6,6 +6,7 @@ TODO:
         add more rdd memory use log
 	support kvro
 
+2018-03-06 Deliver parameter by spark conf, not env
 2018-03-01 Support config executor instance number by spark-submit
 2018-02-28 Support config executor JAVA_OPTS
 2018-02-27 Don't require SPARK_YARN_APP_JAR
